# VocalIA

./: .c8rc.json  .env.example  .eslintrc.json  .gitignore  .mcp.json  .prettierignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY-NINDOHOST.md  Dockerfile.vocalia-api  LICENSE  README.md  automations-registry.json  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.vocalia-api.yml  esbuild.config.mjs  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vercel.json
.husky/: pre-commit
core/: AgencyEventBus.cjs  BillingAgent.cjs  ContextBox.cjs  ErrorScience.cjs  GoogleSheetsDB.cjs  OAuthGateway.cjs  RevenueScience.cjs  SecretVault.cjs  SkillRegistry.cjs  StripeService.cjs  TenantContext.cjs  TenantLogger.cjs  TenantOnboardingAgent.cjs  WebhookRouter.cjs  a2ui-service.cjs  ab-analytics.cjs  audit-store.cjs  auth-middleware.cjs  auth-service.cjs  calendar-slots-connector.cjs  catalog-connector.cjs  chaos-engineering.cjs  client-registry.cjs  compliance-guardian.cjs  conversation-analytics.cjs  conversation-store.cjs  db-api.cjs  elevenlabs-client.cjs  email-service.cjs  fs-utils.cjs  grok-client.cjs  grok-voice-realtime.cjs  http-utils.cjs  hybrid-rag.cjs  kb-crawler.cjs  kb-parser.cjs  kb-provisioner.cjs  kb-quotas.cjs  kling-service.cjs  knowledge-base-services.cjs  (+32 more)
data/: darija-qa-report.json  new_i18n_keys.json  pressure-matrix.json  translation_batches.json  translation_progress.json  translation_qa_report.json  translation_queue.json  ucp-profiles.json
deploy/: ecosystem.config.cjs  nginx-vocalia-voice.conf  nginx-vocalia-website.conf  (+1 more)
sdks/python/: README.md  pyproject.toml
sdks/python/vocalia/: __init__.py  client.py  exceptions.py  models.py  telephony.py  voice.py
(+1345 files in other folders)
